--- a/src/styles.css
+++ b/src/styles.css
@@ -63,3 +63,11 @@ nav a.active {
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+input {
+  border: 0;
+  border-bottom: 1px solid green;
+}
+input:focus{
+  border-bottom: 1px solid greenyellow;
+  outline: none;
+}
