--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,16 @@
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+.app-body {
+  text-align:center;
+}
+.app-body h1 {
+    color: #369;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 250%;
+}
+
+@media screen and (max-width: 550px) {
+  .app-title {
+    width: 300px;
+    margin: auto;
+    margin-bottom: 20px;
+  }
 }
