--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
+<div class="app-body">
+  <h1 class="app-title">
     Welcome to {{ title }}!
   </h1>
   <app-people-info></app-people-info>
