--- a/src/app/fwk/components/search-box/search-box.component.css
+++ b/src/app/fwk/components/search-box/search-box.component.css
@@ -4,6 +4,29 @@
 .content-search-box .label {
     margin-right: 10px;
 }
-.content-search-box .input-box {
-    
+.content-search-box .input-box .list-users{
+    list-style: none;
+    margin-top: 0px;
+    padding: 0px;
+    max-height: 150px;
+    overflow-y: auto;
+    border: 1px solid darkseagreen;
+    border-top: 0px;
+}
+.content-search-box .input-box .list-users li{
+    border-bottom: 1px solid darkseagreen;
+    text-align: center;
+}
+.content-search-box .input-box .list-users li:last-of-type{
+    border-bottom: 0px;
+}
+
+@media screen and (max-width: 750px) {
+    .content-search-box {
+        display: block;
+    }
+    .content-search-box .input-box{
+        margin: 20px 0;
+        display: grid;
+    }
 }
