--- a/src/app/fwk/components/search-box/search-box.component.html
+++ b/src/app/fwk/components/search-box/search-box.component.html
@@ -1,10 +1,20 @@
-<div class="content-search-box">
+<div class="content-search-box" (clickOutside)="closeDropdown()">
   <div class="label">
     <span> {{label}} </span>
   </div>
   <div class="input-box">
     <input type="text" 
-           ngModel="input"
-           (blur)="onSearch()"/>
+           [name]="id"
+           [id]="id"
+           [(ngModel)]="value"
+           (keyup.enter)="onSearch()"
+           (focus)="isActive=true"/>
+
+      <ul class="list-users" *ngIf="value" [hidden]="!isActive">
+          <li *ngFor="let item of _values | filter:value; let i = index;"
+              (click)="onItemClick(item)">
+              <label>{{item.username}}</label>
+          </li>
+      </ul>
   </div>
 </div>
