--- a/src/app/people-info/people-info.component.css
+++ b/src/app/people-info/people-info.component.css
@@ -3,19 +3,23 @@
     width: 70%;
     display: flex;
 }
-
 .content-people-info .app-search-box {
     margin: 10px;
     width: 50%; 
     margin: 0 auto; 
     text-align: left;
 }
-
+.content-people-info .by{
+    position: fixed;
+    bottom: 10px;
+}
 .content-people-info .users-info {
     margin: 10px;
     width: 50%; 
     margin: 0 auto; 
     text-align: left;
+    word-wrap: break-word;
+    padding: 0 20px;
 }
 .content-people-info .users-info span{
     margin-right: 10px;
@@ -25,4 +29,17 @@
     width: 20px;
     height: 20px;
     display: inline-block;
+}
+@media screen and (max-width: 550px) {
+    .content-people-info{
+        display: block;
+        margin-bottom: 20px;
+    }
+    .content-people-info .users-info {
+        width: 100%;
+        padding: 0;
+    }
+    .content-people-info .app-search-box {
+        width: 100%;
+    }
 }
