--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* Master Styles */
+html { background-color: black; }
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
@@ -70,4 +72,25 @@ input {
 input:focus{
   border-bottom: 1px solid greenyellow;
   outline: none;
+}
+span {
+  color: white;
+}
+
+input {
+  background-color: transparent;
+  color:white;
+}
+
+ul li {
+  background-color: white;
+  color: black;
+}
+
+ul li:hover {
+  background-color: lightsteelblue;
+}
+
+a {
+  color: lightskyblue;
 }
